<resources>
    <string name="app_name">Instruct Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">One</string>
    <string name="home">Home</string>
    <string name="my_courses">My Courses</string>
    <string name="saved">Saved</string>
    <string name="account">My Account</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="logout">Log out</string>
    <string name="no_courses">No courses here</string>
    <string name="drawer_open">drawer opened</string>
    <string name="drawer_close">drawer closed</string>
    <string name="login">Log in</string>
    <string name="reviews">Reviews:</string>
    <string name="our_review">Users Review:</string>
    <string name="add_review">Add Review</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign up</string>
    <string name="your_name">your name</string>
    <string name="register">Register</string>
    <string name="read_more"><u>Read more</u></string>
    <string name="submit">Submit</string>
    <string name="ur_review">your review</string>
    <string name="review_add">Review added</string>
    <string name="registering">Registering …</string>
    <string name="signing">Signing in …</string>
    <string name="email_pass_empty">email or password is empty</string>
    <string name="log_failed">The Log is failed</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="retry">RETRY</string>
    <string name="save">Save</string>
    <string name="attend">Attend</string>

</resources>
