<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.magdy.instructme.DetailsFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:collapsedTitleTextAppearance="@color/white"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/toolbar_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="100dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/save"
        android:elevation="@dimen/fab_elevation"
        android:src="@drawable/bookmark_plus_outline"
        android:tint="@color/white"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        app:pressedTranslationZ="@dimen/fab_press_translation_z" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:behavior_overlapTop="24dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical">


                <android.support.v7.widget.CardView
                    android:id="@+id/details_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="2dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">



                            <TextView
                                android:id="@+id/title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="24dp"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:textColor="@android:color/black" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="start"
                            android:layout_margin="16dp"
                            android:orientation="horizontal"
                            >
                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:id="@+id/price"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />

                            <Button
                                android:id="@+id/attend"
                                android:layout_width="fill_parent"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:background="@drawable/rounded_button"
                                android:padding="@dimen/activity_horizontal_margin"
                                android:text="@string/attend"
                                android:textColor="@color/white" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/overView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/activity_horizontal_margin"
                            android:textColor="@android:color/black"
                            android:textSize="24sp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/fire_review_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:maxLines="1"
                            android:text="@string/our_review"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/add_review"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:background="@drawable/rounded_button"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:text="@string/add_review"
                            android:textColor="@color/white" />
                    </RelativeLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/user_review_recycler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
